# cli-tools

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml  rust.yml
crates/agent-memory/: Cargo.toml  README.md
crates/agent-memory/src/: main.rs  memory_schema.sql
crates/project-index/: Cargo.toml  README.md
crates/project-index/src/: main.rs  project_index_schema.sql
crates/session-reader/: Cargo.toml  README.md
crates/session-reader/src/: main.rs
crates/ui-server/: Cargo.toml
crates/ui-server/src/: lib.rs
stitch_visual_interface_enhancement/agent_sessions_redesign/: code.html
stitch_visual_interface_enhancement/memory_database_redesign/: code.html
stitch_visual_interface_enhancement/obsidian_flux/: DESIGN.md
stitch_visual_interface_enhancement/repository_database_redesign/: code.html
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/server/: agentMemoryAdapter.ts  normalize.ts  projectIndexAdapter.ts  routes.ts  sessionReaderAdapter.ts  types.ts
ui/session-viewer/: vite.config.ts
ui/session-viewer/server/: http.ts  routes.ts  types.ts  viteSessionApiPlugin.ts
ui/session-viewer/src/: App.css  App.tsx  index.css  types.ts
ui/session-viewer/src/components/: SessionFilters.tsx  SessionRow.tsx  TranscriptPane.tsx
ui/src/: App.css  App.tsx  index.css  types.ts
ui/src/components/: AppNav.tsx  SessionFilters.tsx  SessionList.tsx  SessionRow.tsx  ToolCallCard.tsx  ToolFailureCard.tsx  TranscriptMessage.tsx  TranscriptPane.tsx  TranscriptPart.tsx
ui/src/lib/: api.ts  formatters.ts  indexApi.ts  memoryApi.ts  transcriptNormalizer.ts  useIndexBrowser.ts  useMemoryBrowser.ts  useSessionBrowser.ts
ui/src/views/: IndexView.tsx  MemoryView.tsx  SessionsView.tsx
