[package]
name = "agent-memory"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "agent_memory"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
