[package]
name = "project-index"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "project_index"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
walkdir = "2"
ui-server = { path = "../ui-server" }
