[package]
name = "ui-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
url = "2"
open = "5"
urlencoding = "2"
